--- a/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -78,35 +78,72 @@
 	<div class="sidebar-inner slimscroll">
 		<div id="sidebar-menu" class="sidebar-menu">
 			<ul>
-				<li class="menu-title"><span>MAIN MENU</span></li>
+			
 				<li>
 					<ul>
-						<li class="submenu">
-							<a href="javascript:void(0);">
-								<i class="ti ti-smart-home"></i><span>Dashboard</span><span class="badge badge-danger fs-10 fw-medium text-white p-1">Hot</span><span class="menu-arrow"></span>
+						<li class="">
+							<a asp-area="Admin" asp-controller="Home" asp-action="Index">
+								<i class="ti ti-smart-home"></i><span>Dashboard</span>
+							</a>
+
+						
+						<li class="">
+							<a asp-area="Admin" asp-controller="User" asp-action="Index">
+								<i class="fa fa-users me-2"></i><span>Users</span>
 							</a>
 
 						</li>
-						<li class="submenu">
+						<li class="">
+							<a asp-area="Admin" asp-controller="CV" asp-action="Index">
+								<i class="fa fa-file-alt me-2"></i> <span>Candidate's CV</span>
+							</a>
+
+						</li>
+				</li>
+				<li class="">
+					<a asp-area="Admin" asp-controller="CandidateProfiles" asp-action="Index">
+						<i class="fa fa-user-tie me-2"></i><span> Manage Candidate</span>
+					</a>
+
+				</li>
+						<li class="">
+							<a asp-area="Admin" asp-controller="ActivityLog" asp-action="Index">
+								<i class="fa fa-history me-2"></i> <span> Activity Log</span>
+							</a>
+
+						</li>
+					@* 	<li class="submenu">
 							<a href="javascript:void(0);">
 								<i class="ti ti-layout-grid-add"></i><span>Applications</span>
 								<span class="menu-arrow"></span>
 							</a>
 							<ul>
 								<li>
-									<a href="@Url.Action("Index", "User", new { area = "Admin" })">Users</a>
-								</li>
-
-
-								<li>
-									<a href="@Url.Action("Index", "CV", new { area = "Admin" })">Candidate's' CV</a>
+									<a href="@Url.Action("Index", "User", new { area = "Admin" })">
+										<i class="fa fa-users me-2"></i> Users
+									</a>
 								</li>
 
 								<li>
-									<a href="@Url.Action("Index", "CandidateProfiles", new { area = "Admin" })">Candidate's' Profile</a>
+									<a href="@Url.Action("Index", "CV", new { area = "Admin" })">
+										<i class="fa fa-file-alt me-2"></i> Candidate's CV
+									</a>
+								</li>
+
+								<li>
+									<a asp-area="Admin" asp-controller="CandidateProfiles" asp-action="Index">
+										<i class="fa fa-user-tie me-2"></i> Manage Candidate
+									</a>
+								</li>
+
+								<li>
+									<a asp-area="Admin" asp-controller="ActivityLog" asp-action="Index">
+										<i class="fa fa-history me-2"></i> Activity Log
+									</a>
 								</li>
 							</ul>
-						</li>
+
+						</li> *@
 
 					</ul>
 				</li>
