--- a/Areas/Admin/Views/User/Index.cshtml
+++ b/Areas/Admin/Views/User/Index.cshtml
@@ -24,8 +24,9 @@
             <div class="card shadow-lg border-0 rounded-4">
                 <div class="card-body p-4">
 
-                    <!-- Table -->
-                    <table id="usersTable" class="table table-striped table-bordered table-hover align-middle rounded-3" style="width:100%">
+                    <div class="table-responsive">
+                        <!-- Table -->
+                    <table id="usersTable" class="table table-striped table-bordered table-hover align-middle rounded-3 " style="width:100%">
                         <thead class="bg-light">
                             <tr>
                                 <th>Full Name</th>
@@ -48,6 +49,7 @@
                                            class="btn btn-sm btn-outline-primary rounded-pill px-3 me-1">
                                             <i class="fa fa-edit"></i>
                                         </a>
+                                       
 
                                         <a asp-action="Delete" asp-route-id="@user.Id"
                                            class="btn btn-sm btn-outline-danger rounded-pill px-3">
@@ -58,7 +60,7 @@
                             }
                         </tbody>
                     </table>
-
+                    </div>
                 </div>
             </div>
 
